--- a/Reserva_Vehiculos/Reserva_Vehiculos.csproj
+++ b/Reserva_Vehiculos/Reserva_Vehiculos.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AWSSDK.S3" Version="3.7.307.15" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql" Version="8.0.2" />
     <PackageReference Include="Npgsql.ConfigureConnection" Version="0.1.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
