--- a/Reserva_Vehiculos/Reserva_Vehiculos.csproj
+++ b/Reserva_Vehiculos/Reserva_Vehiculos.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Amazon.S3" Version="0.31.2" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.307.15" />
+    <PackageReference Include="itext7" Version="8.0.4" />
+    <PackageReference Include="iTextSharp" Version="5.5.13" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
