--- a/Reserva_Vehiculos/Reserva_Vehiculos.csproj
+++ b/Reserva_Vehiculos/Reserva_Vehiculos.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.102.2" />
     <PackageReference Include="itext7" Version="8.0.4" />
     <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.4" />
     <PackageReference Include="itext7.pdfhtml" Version="5.0.4" />
